--- a/web/html/ocr.html
+++ b/web/html/ocr.html
@@ -717,7 +717,7 @@
                     <div class="col-xs-4">
                         <br><br><br><br>
 
-                        <div style="display:table-cell; vertical-align: middle">ls
+                        <div style="display:table-cell; vertical-align: middle">
                             <ul class="ace-thumbnails clearfix">
                                 <li>
                                     <img id="target_img" width="280" height="280" alt="280x280"/>
