Add supporting working directory for multi-tenency

--- a/web/html/security.html
+++ b/web/html/security.html
@@ -516,6 +516,7 @@
                                 <pre>
 fab pdf.text:/sample/report.pdf,/tmp/extracted
 fab pdf.image:/sample/report.pdf,/tmp/extracted
+fab spark.count_line_with:/tmp/extracted/*.txt,대외비:보안:회로:도면
 fab caffe.predict:/model/caffe/voc,/tmp/extracted-000.jpg,True,256:256,2:1:0,3</pre>
                                 <pre style="background-color:#38424a">
 chair 0.493845
