Add a user-defined script

--- a/web/html/security.html
+++ b/web/html/security.html
@@ -514,12 +514,12 @@
 
                                 <div style="padding-left: 20px">
                                 <pre>
-fab pdf.text:/sample/report.pdf,/tmp/extracted
-fab pdf.image:/sample/report.pdf,/tmp/extracted
-fab spark.count_line_with:/tmp/extracted/*.txt,대외비:보안:회로:도면
-fab caffe.predict:/model/caffe/voc,/tmp/extracted-000.jpg,True,256:256,2:1:0,3</pre>
+fab pdf.image:/sample/circuit.pdf,/tmp/circuit
+fab pdf.text:/sample/circuit.pdf,/tmp/circuit/report.txt
+fab spark.count_line_with:/tmp/circuit/*.txt,대외비:보안:회로:도면
+fab caffe.predict:/model/caffe/voc,/tmp/circuit/circuit-000.jpg,True,256:256,2:1:0,3</pre>
                                 <pre style="background-color:#38424a">
-1
+2
 chair 0.493845
 circuit 0.247732
 car 0.0570637</pre>
